import chart MSO 2007 streams correctly for docx files, tdf#82216

Change-Id: Icda809faf315dac5953d38781b2b401d51f7a40a